Fix build.gradle file by using a project flag for coverage runs